--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -4,16 +4,37 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MediaBackupManager.View"
+             xmlns:popups="clr-namespace:MediaBackupManager.View.Popups"
+             xmlns:popupsvm="clr-namespace:MediaBackupManager.ViewModel.Popups"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Control.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="2" />
         </Style>
+
+        
+        <!--<DataTemplate DataType="{x:Type popupsvm:YesNoPopupViewModel}">
+            <popups:YesNoPopup/>
+        </DataTemplate>-->
+        
     </Control.Resources>
-    
-    
     <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+        <DockPanel.Style>
+            <Style TargetType="DockPanel">
+                <!--Disable all controls while a popup is active-->
+                <Setter Property="IsEnabled" Value="True" />
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding ShowPopup}" Value="True">
+                        <Setter Property="IsEnabled" Value="False" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </DockPanel.Style>
+            <Popup IsOpen="{Binding ShowPopup}">
+            <ContentControl Content="{Binding Path=CurrentPopup}" />
+        </Popup>
+
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
             <TextBox Width="200" Height="40" IsEnabled="True" Text="{Binding BackupSetLabel}"></TextBox>
         </StackPanel>
