--- a/MediaBackupManager/View/Popups/OKCancelPopup.xaml
+++ b/MediaBackupManager/View/Popups/OKCancelPopup.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MediaBackupManager.View.Popups.YesNoPopup"
+﻿<UserControl x:Class="MediaBackupManager.View.Popups.OKCancelPopup"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
