--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -9,48 +9,50 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Control.Resources>
+        <local:InvertBoolConverter x:Key="InvertBool" />
+        <local:ParemeteredBooleanToVisibilityConverter x:Key="BoolToVisibility" />
+        <local:ParemeteredBooleanToVisibilityConverter x:Key="InvertBoolToVisibility" Reverse="True" />
+
         <Style TargetType="Button">
             <Setter Property="Margin" Value="2" />
         </Style>
 
-        
-        <!--<DataTemplate DataType="{x:Type popupsvm:YesNoPopupViewModel}">
-            <popups:YesNoPopup/>
-        </DataTemplate>-->
-        
     </Control.Resources>
     <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
-        <DockPanel.Style>
-            <Style TargetType="DockPanel">
-                <!--Disable all controls while a popup is active-->
-                <Setter Property="IsEnabled" Value="True" />
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding ShowPopup}" Value="True">
-                        <Setter Property="IsEnabled" Value="False" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-        </DockPanel.Style>
-            <Popup IsOpen="{Binding ShowPopup}">
-            <ContentControl Content="{Binding Path=CurrentPopup}" />
-        </Popup>
 
+        <!--Label-->
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <TextBox Width="200" Height="40" IsEnabled="True" Text="{Binding BackupSetLabel}"></TextBox>
+            <TextBox x:Name="BackupSetLabel"  Width="200" Height="40" 
+                     Text="{Binding BackupSetLabel}"
+                     IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}" />
         </StackPanel>
+        
+        <!--Path and path picker-->
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <TextBox Width="200" Height="40" IsReadOnly="True" Text="{Binding Path=SelectedDirectory}"></TextBox>
-            <Button x:Name="btnSelectDirectory" Content="Select Directory" Command="{Binding SelectDirectoryCommand}"></Button>
+            <TextBox x:Name="BackupSetPath" Width="200" Height="40" 
+                     Text="{Binding Path=SelectedDirectory}"
+                     IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}" />
+            <Button x:Name="btnSelectDirectory" Content="Select Directory" 
+                    Command="{Binding SelectDirectoryCommand}"
+                    IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}" />
         </StackPanel>
+        
+        <!--Progress bar and text-->
         <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical" Margin="5">
-            <TextBox Text="{Binding ScanStatusText}" Width="230"  />
+            <TextBox Text="{Binding ScanStatusText}" Width="230" IsReadOnly="True" 
+                     Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" />
             <ProgressBar Height="20" Width="230"
                          Minimum="0" Maximum="100" 
-                         Value="{Binding ScanProgress}"></ProgressBar>
+                         Value="{Binding ScanProgress}"
+                         Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" />
         </StackPanel>
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5">
-            <Button x:Name="btnConfirm" Content="OK" Command="{Binding ConfirmCommand}"></Button>
-            <Button x:Name="btnCancel" Content="Cancel" Command="{Binding CancelCommand}"></Button>
+        
+        <!--Start and Cancel buttons-->
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5" HorizontalAlignment="Right">
+            <Button x:Name="btnConfirm" Content="Start" Command="{Binding StartCommand}"
+                    Visibility="{Binding IsScanInProgressOrCompleted, Converter={StaticResource InvertBoolToVisibility}}">
+            </Button>
+            <Button x:Name="btnCancel" Content="{Binding CancelButtonCaption}" Command="{Binding CancelCommand}"></Button>
         </StackPanel>
     </DockPanel>
 </UserControl>
