--- a/MediaBackupManager/View/Popups/PopupBase.xaml
+++ b/MediaBackupManager/View/Popups/PopupBase.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="{Binding Title}" Height="300" Width="300"
         SizeToContent="WidthAndHeight"
-        WindowStyle="None">
+        WindowStyle="None" Closed="Window_Closed">
     <Window.Resources>
         <DataTemplate DataType="{x:Type popupsvm:OKCancelPopupViewModel}">
             <local:OKCancelPopup/>
