--- a/MediaBackupManager/View/DirectoryBrowserView.xaml
+++ b/MediaBackupManager/View/DirectoryBrowserView.xaml
@@ -13,20 +13,26 @@
         <local:ByteToHumanReadableConverter x:Key="ByteToHuman" />
 
         <!--Treeview Resources-->
-        <Style TargetType="TreeViewItem">
+
+        <!--Highlight files with backup count of 1-->
+        <Style TargetType="TreeViewItem" x:Key="MissingBackupColor">
             <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=Name}" Value="Fiddler">
-                    <Setter Property="Foreground" Value="BlueViolet" />
-                </DataTrigger>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=HasMultipleBackups}" Value="False" />
+                        <Condition Binding="{Binding 
+                            RelativeSource={RelativeSource FindAncestor, 
+                            AncestorType={x:Type UserControl}}, 
+                            Path=DataContext.HighlightMissingBackupFiles }" 
+                                   Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <MultiDataTrigger.Setters>
+                        <Setter Property="Foreground" Value="Red" />
+                    </MultiDataTrigger.Setters>
+                </MultiDataTrigger>
             </Style.Triggers>
         </Style>
-        <Style TargetType="TreeViewItem" x:Key="BackupStatusColor">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=HasMultipleBackups}" Value="False">
-                    <Setter Property="Foreground" Value="Red" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
+
         <!--GridView Resources-->
         <Style TargetType="{x:Type GridViewColumnHeader}">
             <Setter Property="HorizontalContentAlignment" Value="Left" />
@@ -34,9 +40,19 @@
         <Style TargetType="{x:Type ListViewItem}">
             <EventSetter Event="MouseDoubleClick" Handler="GridFiles_MouseDoubleClick" />
             <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=HasMultipleBackups}" Value="False">
-                    <Setter Property="Foreground" Value="Red" />
-                </DataTrigger>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=HasMultipleBackups}" Value="False" />
+                        <Condition Binding="{Binding 
+                            RelativeSource={RelativeSource FindAncestor, 
+                            AncestorType={x:Type UserControl}}, 
+                            Path=DataContext.HighlightMissingBackupFiles }" 
+                                   Value="True" />
+                    </MultiDataTrigger.Conditions>
+                    <MultiDataTrigger.Setters>
+                        <Setter Property="Foreground" Value="Red" />
+                    </MultiDataTrigger.Setters>
+                </MultiDataTrigger>
             </Style.Triggers>
         </Style>
         <!--Compositecollections don't have support for sorting/filtering, use workaround instead-->
@@ -49,10 +65,10 @@
 
     </Control.Resources>
     
-    <Grid x:Name="RootGrid" Margin="10">
+    <Grid x:Name="LayoutRoot" Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
-            <RowDefinition Height="30" />
+            <RowDefinition Height="20" />
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -73,18 +89,16 @@
             <Button x:Name="btnShowBackupSetView" Content="Backup Sets" Command="{Binding ShowBackupSetOverviewCommand}" />
         </StackPanel>
 
-        <TreeView x:Name="treeDirectory" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Margin="2" MinWidth="50" MaxWidth="250"
+        <!--Directory Tree-->
+        <CheckBox x:Name="ToggleTreeViewHighlights" Content="Show files without backup" Grid.Row="1" Grid.Column="0" 
+                  IsChecked="{Binding HighlightMissingBackupFiles}" />
+        <TreeView x:Name="treeDirectory" Grid.Row="2"  Grid.Column="0" Margin="2" MinWidth="50" MaxWidth="250"
                   ItemsSource="{Binding Path=Index.BackupSets}"
                   SelectedItemChanged="treeDirectory_SelectedItemChanged">
             <TreeView.Resources>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding TreeViewIsExpanded, Mode=TwoWay}" />
                     <Setter Property="IsSelected" Value="{Binding TreeViewIsSelected, Mode=TwoWay}" />
-                    <!--<Style.Triggers>
-                        <Trigger Property="IsExpanded" Value="True">
-                            <Setter Property="FontWeight" Value="Bold" />
-                        </Trigger>
-                    </Style.Triggers>-->
                 </Style>
                 <HierarchicalDataTemplate DataType="{x:Type viewmodel:BackupSetViewModel}" 
                                           ItemsSource="{Binding Path=RootDirectory.SubDirectories}">
@@ -92,7 +106,7 @@
                 </HierarchicalDataTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type viewmodel:FileDirectoryViewModel}" 
                                           ItemsSource="{Binding Path=SubDirectories}">
-                    <TreeViewItem Header="{Binding Path=Name}" Style="{StaticResource BackupStatusColor}" IsExpanded="{Binding TreeViewIsExpanded, Mode=TwoWay}"/>
+                    <TreeViewItem Header="{Binding Path=Name}" Style="{StaticResource MissingBackupColor}" IsExpanded="{Binding TreeViewIsExpanded, Mode=TwoWay}"/>
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
