--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -18,54 +18,75 @@
             <Setter Property="Margin" Value="2" />
         </Style>
 
+        <Style TargetType="Label" x:Key="Title">
+            <Setter Property="FontSize" Value="20" />
+        </Style>
     </Control.Resources>
-    <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+    <Border VerticalAlignment="Center" HorizontalAlignment="Center"
+            MinHeight="200" MinWidth="350" Background="White"
+            CornerRadius="4">
+        <Grid Margin="30">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition />
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <!--Title-->
+            <Label Grid.Row="0" Grid.Column="0" 
+                   Content="{Binding Title}" 
+                   Style="{StaticResource Title}"/>
 
-        <!--Label, Path and path picker-->
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal"
+            <!--Label, Path and path picker-->
+            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal"
                     IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}">
-            <TextBox x:Name="BackupSetLabel"  Width="200" Height="40">
-                <TextBox.Text>
-                    <Binding Path="BackupSetLabel" UpdateSourceTrigger="PropertyChanged">
-                        <Binding.ValidationRules>
-                            <local:StringNotEmptyRule />
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
-            <TextBox x:Name="BackupSetPath" Width="200" Height="40">
-                <TextBox.Text>
-                    <Binding Path="SelectedDirectory" UpdateSourceTrigger="PropertyChanged">
-                        <Binding.ValidationRules>
-                            <local:StringNotEmptyRule />
-                        </Binding.ValidationRules>
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
-            <Button x:Name="btnSelectDirectory" Content="Select Directory" 
+                <TextBox x:Name="BackupSetLabel"  Width="200" Height="40">
+                    <TextBox.Text>
+                        <Binding Path="BackupSetLabel" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <local:StringNotEmptyRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <TextBox x:Name="BackupSetPath" Width="200" Height="40">
+                    <TextBox.Text>
+                        <Binding Path="SelectedDirectory" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <local:StringNotEmptyRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <Button x:Name="btnSelectDirectory" Content="Select Directory" 
                     Command="{Binding SelectDirectoryCommand}" />
-        </StackPanel>
-        
-        <!--Progress bar and text-->
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical" Margin="5"
+            </StackPanel>
+
+            <!--Progress bar and text-->
+            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical" Margin="5"
                     Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" >
-            <TextBox Text="{Binding ScanStatusText}" Width="230" IsReadOnly="True" />
-            <ProgressBar Height="20" Width="230"
+                <TextBox Text="{Binding ScanStatusText}" Width="230" IsReadOnly="True" />
+                <ProgressBar Height="20" Width="230"
                          Minimum="0" Maximum="100" 
                          Value="{Binding ScanProgress}" />
-            <StackPanel Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}">
-                <Label Content="Scan errors:" />
-                <TextBox x:Name="ProgressLog" IsReadOnly="True" MaxHeight="50" Text="{Binding FileScanErrorString}" />
-                
+                <StackPanel Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}">
+                    <Label Content="Scan errors:" />
+                    <TextBox x:Name="ProgressLog" IsReadOnly="True" MaxHeight="50" Text="{Binding FileScanErrorString}" />
+
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-        
-        <!--Start and Cancel buttons-->
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5" HorizontalAlignment="Right">
-            <Button x:Name="btnConfirm" Content="Start" Command="{Binding StartCommand}"
+
+            <!--Start and Cancel buttons-->
+            <StackPanel Grid.Row="3" Grid.Column="1" DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5" HorizontalAlignment="Right">
+                <Button x:Name="btnConfirm" Content="Start" Command="{Binding StartCommand}"
                     Visibility="{Binding IsScanInProgressOrCompleted, Converter={StaticResource InvertBoolToVisibility}}">
-            </Button>
-            <Button x:Name="btnCancel" Content="{Binding CancelButtonCaption}" Command="{Binding CancelCommand}"></Button>
-        </StackPanel>
-    </DockPanel>
+                </Button>
+                <Button x:Name="btnCancel" Content="{Binding CancelButtonCaption}" Command="{Binding CancelCommand}"></Button>
+            </StackPanel>
+
+        </Grid>
+    </Border>
 </UserControl>
