--- a/MediaBackupManager/App.xaml
+++ b/MediaBackupManager/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:MediaBackupManager"
              StartupUri="View\MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
