--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -11,35 +11,42 @@
     <Control.Resources>
         <!--Converters-->
         <local:InvertBoolConverter x:Key="InvertBool" />
-        <local:ParemeteredBooleanToVisibilityConverter x:Key="BoolToVisibility" />
+        <local:ParemeteredBooleanToVisibilityConverter x:Key="BoolToVisibility" Collapse="True" />
         <local:ParemeteredBooleanToVisibilityConverter x:Key="InvertBoolToVisibility" Reverse="True" />
-
-        <Style TargetType="Button">
-            <Setter Property="Margin" Value="2" />
-        </Style>
     </Control.Resources>
+    
     <Border VerticalAlignment="Center" HorizontalAlignment="Center"
-            MinHeight="200" MinWidth="350" Background="White"
+            MinHeight="200" MinWidth="550" MaxWidth="900" Background="White"
             CornerRadius="4">
         <Grid Margin="30">
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition />
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" MaxHeight="300"/>
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <!--Title-->
-            <Label Grid.Row="0" Grid.Column="0" 
+            <Label Grid.Row="0" Grid.Column="0"
                    Content="{Binding Title}" 
                    Style="{StaticResource Title}"/>
-
+            <Separator Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom"/>
             <!--Label, Path and path picker-->
-            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal"
-                    IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}">
-                <TextBox x:Name="BackupSetLabel"  Width="200" Height="40">
+            <Grid Grid.Row="1" Grid.Column="0" Margin="0,20"
+                IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="*" MinWidth="200" MaxWidth="400" />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Label" />
+                <TextBox x:Name="BackupSetLabel" Grid.Row="0" Grid.Column="1" >
                     <TextBox.Text>
                         <Binding Path="BackupSetLabel" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
@@ -48,7 +55,8 @@
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
-                <TextBox x:Name="BackupSetPath" Width="200" Height="40">
+                <Label Content="Directory" Grid.Row="1" Grid.Column="0"  />
+                <TextBox x:Name="BackupSetPath" Grid.Row="1" Grid.Column="1" >
                     <TextBox.Text>
                         <Binding Path="SelectedDirectory" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
@@ -57,30 +65,37 @@
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
-                <Button x:Name="btnSelectDirectory" Content="Select Directory" 
-                    Command="{Binding SelectDirectoryCommand}" />
-            </StackPanel>
+                <Button x:Name="btnSelectDirectory" Grid.Row="1" Grid.Column="2"
+                        Content="..."
+                        Command="{Binding SelectDirectoryCommand}" />
+            </Grid>
 
             <!--Progress bar and text-->
-            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical" Margin="5"
+            <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical"
                     Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" >
-                <TextBox Text="{Binding ScanStatusText}" Width="230" IsReadOnly="True" />
-                <ProgressBar Height="20" Width="230"
-                         Minimum="0" Maximum="100" 
-                         Value="{Binding ScanProgress}" />
-                <StackPanel Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}">
-                    <Label Content="Scan errors:" />
-                    <TextBox x:Name="ProgressLog" IsReadOnly="True" MaxHeight="50" Text="{Binding FileScanErrorString}" />
-
-                </StackPanel>
+                <Grid MaxWidth="500">
+                    <Label Content="{Binding ScanStatusText}" />
+                    <ProgressBar
+                         Minimum="0" Maximum="100"
+                         Value="{Binding ScanProgress}"/>
+                </Grid>
+                <TextBox x:Name="ProgressLog" IsReadOnly="False" MaxHeight="200"
+                         Text="{Binding FileScanErrorString}" 
+                         Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}"
+                         Height="Auto" VerticalScrollBarVisibility="Auto"
+                         HorizontalScrollBarVisibility="Auto" TextWrapping="NoWrap"/>
             </StackPanel>
 
             <!--Start and Cancel buttons-->
-            <StackPanel Grid.Row="3" Grid.Column="1" DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5" HorizontalAlignment="Right">
-                <Button x:Name="btnConfirm" Content="Start" Command="{Binding StartCommand}"
-                    Visibility="{Binding IsScanInProgressOrCompleted, Converter={StaticResource InvertBoolToVisibility}}">
+            <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal"
+                        HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Button x:Name="btnConfirm" Content="Start" Style="{StaticResource ColorButton}"
+                        Command="{Binding StartCommand}"
+                        Visibility="{Binding IsScanInProgressOrCompleted, Converter={StaticResource InvertBoolToVisibility}}">
                 </Button>
-                <Button x:Name="btnCancel" Content="{Binding CancelButtonCaption}" Command="{Binding CancelCommand}"></Button>
+                <Button x:Name="btnCancel" Style="{StaticResource ColorButton}"
+                        Content="{Binding CancelButtonCaption}" 
+                        Command="{Binding CancelCommand}" />
             </StackPanel>
 
         </Grid>
