--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -13,8 +13,13 @@
         <local:InvertBoolConverter x:Key="InvertBool" />
         <local:ParemeteredBooleanToVisibilityConverter x:Key="BoolToVisibility" Collapse="True" />
         <local:ParemeteredBooleanToVisibilityConverter x:Key="InvertBoolToVisibility" Reverse="True" />
+
+        <Canvas x:Key="icon_appbar_folder_open" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_folder_open" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Path Width="44" Height="26" Canvas.Left="19" Canvas.Top="24" Stretch="Fill" Fill="#FF000000" Data="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z "/>
+        </Canvas>
+
     </Control.Resources>
-    
+
     <Border VerticalAlignment="Center" HorizontalAlignment="Center"
             MinHeight="200" MinWidth="550" MaxWidth="900" Background="White"
             CornerRadius="4">
@@ -66,24 +71,24 @@
                     </TextBox.Text>
                 </TextBox>
                 <Button x:Name="btnSelectDirectory" Grid.Row="1" Grid.Column="2" 
-                        VerticalAlignment="Bottom"
-                        Command="{Binding SelectDirectoryCommand}">
-                    <StackPanel>
-                        <Image Source="/icons/appbar.folder.open.png" />
-                    </StackPanel>
+                        VerticalAlignment="Bottom" Width="26" Height="16" 
+                        BorderBrush="Transparent" Background="Transparent"
+                        Margin="0,5"
+                        Command="{Binding SelectDirectoryCommand}" 
+                        Content="{StaticResource appbar_folder_open}">
                 </Button>
             </Grid>
 
             <!--Progress bar and text-->
             <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical"
                     Visibility="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource BoolToVisibility}}" >
-                <Grid MaxWidth="500">
+                <StackPanel Width="500" Orientation="Vertical">
                     <Label Content="{Binding ScanStatusText}" />
-                    <ProgressBar
+                    <ProgressBar Height="30"
                          Minimum="0" Maximum="100"
                          Value="{Binding ScanProgress}"/>
-                </Grid>
-                <TextBox x:Name="ProgressLog" IsReadOnly="False" MaxHeight="200"
+                </StackPanel>
+                <TextBox x:Name="ProgressLog" IsReadOnly="False" Width="500" MaxHeight="200"
                          Text="{Binding FileScanErrorString}" 
                          Visibility="{Binding Path=HasScanErrors, Converter={StaticResource BoolToVisibility}}"
                          Height="Auto" VerticalScrollBarVisibility="Auto"
